// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"Switch" renders (dark theme) 1`] = `
.emotion-1 {
  position: relative;
  width: 42px;
  display: inline-block;
  vertical-align: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-align: left;
}

.emotion-0 {
  display: block;
  width: 200%;
  margin-left: -100%;
  -webkit-transition: margin 0.1s ease-in 0s;
  transition: margin 0.1s ease-in 0s;
}

.emotion-0:before,
.emotion-0:after {
  background-color: #d2d2d2;
  display: block;
  float: left;
  width: 50%;
  height: 25px;
  padding: 0;
  line-height: 25px;
  box-sizing: border-box;
}

.emotion-0:before {
  content: " ";
  padding-left: 10px;
}

.emotion-0:after {
  content: " ";
  padding-right: 10px;
  text-align: right;
}

.emotion-2 {
  background: #000;
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

<div
  className="emotion-2"
>
  <div
    className="emotion-1"
  >
    <input
      id="3"
      onChange={[Function]}
      style={
        Object {
          "display": "none",
        }
      }
      type="checkbox"
    />
    <label
      htmlFor="3"
      style={
        Object {
          "borderRadius": "20px",
          "cursor": "pointer",
          "display": "block",
          "margin": 0,
          "overflow": "hidden",
        }
      }
    >
      <span
        className="emotion-0"
      />
      <span
        style={
          Object {
            "background": "#fff",
            "borderRadius": "100%",
            "bottom": 0,
            "boxShadow": "0px 0px 2px -1px gray",
            "display": "block",
            "height": "23px",
            "margin": "1px",
            "opacity": undefined,
            "position": "absolute",
            "right": "17px",
            "top": 0,
            "transition": "all 0.15s ease-in 0s",
            "width": "23px",
          }
        }
      />
    </label>
  </div>
</div>
`;

exports[`"Switch" renders checked 1`] = `
.emotion-2 {
  background: rgb(247,248,250);
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-1 {
  position: relative;
  width: 42px;
  display: inline-block;
  vertical-align: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-align: left;
}

.emotion-0 {
  display: block;
  width: 200%;
  margin-left: 0;
  -webkit-transition: margin 0.1s ease-in 0s;
  transition: margin 0.1s ease-in 0s;
}

.emotion-0:before,
.emotion-0:after {
  background-color: #0c78ba;
  display: block;
  float: left;
  width: 50%;
  height: 25px;
  padding: 0;
  line-height: 25px;
  box-sizing: border-box;
}

.emotion-0:before {
  content: " ";
  padding-left: 10px;
}

.emotion-0:after {
  content: " ";
  padding-right: 10px;
  text-align: right;
}

<div
  className="emotion-2"
>
  <div
    className="emotion-1"
  >
    <input
      checked={true}
      id="2"
      onChange={[Function]}
      style={
        Object {
          "display": "none",
        }
      }
      type="checkbox"
    />
    <label
      htmlFor="2"
      style={
        Object {
          "borderRadius": "20px",
          "cursor": "pointer",
          "display": "block",
          "margin": 0,
          "overflow": "hidden",
        }
      }
    >
      <span
        className="emotion-0"
      />
      <span
        style={
          Object {
            "background": "#fff",
            "borderRadius": "100%",
            "bottom": 0,
            "boxShadow": "0px 0px 2px -1px gray",
            "display": "block",
            "height": "23px",
            "margin": "1px",
            "opacity": undefined,
            "position": "absolute",
            "right": "0px",
            "top": 0,
            "transition": "all 0.15s ease-in 0s",
            "width": "23px",
          }
        }
      />
    </label>
  </div>
</div>
`;

exports[`"Switch" renders disabled 1`] = `
.emotion-2 {
  background: rgb(247,248,250);
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-1 {
  position: relative;
  width: 42px;
  display: inline-block;
  vertical-align: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-align: left;
}

.emotion-0 {
  display: block;
  width: 200%;
  margin-left: -100%;
  -webkit-transition: margin 0.1s ease-in 0s;
  transition: margin 0.1s ease-in 0s;
}

.emotion-0:before,
.emotion-0:after {
  background-color: rgb(228,228,228);
  display: block;
  float: left;
  width: 50%;
  height: 25px;
  padding: 0;
  line-height: 25px;
  box-sizing: border-box;
}

.emotion-0:before {
  content: " ";
  padding-left: 10px;
}

.emotion-0:after {
  content: " ";
  padding-right: 10px;
  text-align: right;
}

<div
  className="emotion-2"
>
  <div
    className="emotion-1"
  >
    <input
      disabled={true}
      id="4"
      onChange={[Function]}
      style={
        Object {
          "display": "none",
        }
      }
      type="checkbox"
    />
    <label
      htmlFor="4"
      style={
        Object {
          "borderRadius": "20px",
          "cursor": "",
          "display": "block",
          "margin": 0,
          "overflow": "hidden",
        }
      }
    >
      <span
        className="emotion-0"
      />
      <span
        style={
          Object {
            "background": "#fff",
            "borderRadius": "100%",
            "bottom": 0,
            "boxShadow": "0px 0px 2px -1px gray",
            "display": "block",
            "height": "23px",
            "margin": "1px",
            "opacity": 0.7,
            "position": "absolute",
            "right": "17px",
            "top": 0,
            "transition": "all 0.15s ease-in 0s",
            "width": "23px",
          }
        }
      />
    </label>
  </div>
</div>
`;

exports[`"Switch" renders unchecked 1`] = `
.emotion-2 {
  background: rgb(247,248,250);
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-1 {
  position: relative;
  width: 42px;
  display: inline-block;
  vertical-align: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-align: left;
}

.emotion-0 {
  display: block;
  width: 200%;
  margin-left: -100%;
  -webkit-transition: margin 0.1s ease-in 0s;
  transition: margin 0.1s ease-in 0s;
}

.emotion-0:before,
.emotion-0:after {
  background-color: #d2d2d2;
  display: block;
  float: left;
  width: 50%;
  height: 25px;
  padding: 0;
  line-height: 25px;
  box-sizing: border-box;
}

.emotion-0:before {
  content: " ";
  padding-left: 10px;
}

.emotion-0:after {
  content: " ";
  padding-right: 10px;
  text-align: right;
}

<div
  className="emotion-2"
>
  <div
    className="emotion-1"
  >
    <input
      id="1"
      onChange={[Function]}
      style={
        Object {
          "display": "none",
        }
      }
      type="checkbox"
    />
    <label
      htmlFor="1"
      style={
        Object {
          "borderRadius": "20px",
          "cursor": "pointer",
          "display": "block",
          "margin": 0,
          "overflow": "hidden",
        }
      }
    >
      <span
        className="emotion-0"
      />
      <span
        style={
          Object {
            "background": "#fff",
            "borderRadius": "100%",
            "bottom": 0,
            "boxShadow": "0px 0px 2px -1px gray",
            "display": "block",
            "height": "23px",
            "margin": "1px",
            "opacity": undefined,
            "position": "absolute",
            "right": "17px",
            "top": 0,
            "transition": "all 0.15s ease-in 0s",
            "width": "23px",
          }
        }
      />
    </label>
  </div>
</div>
`;
